--- a/templates/upload_employees.html
+++ b/templates/upload_employees.html
@@ -54,12 +54,12 @@
                         <!-- Other Actions -->
                         <div class="row text-center">
                             <div class="col-md-4">
-                                <a href="{{ url_for('employee_import.download_template') }}" class="btn btn-outline-primary">
+                                <a href="{{ url_for('employee_import.download_employee_template') }}" class="btn btn-outline-primary">
                                     <i class="bi bi-download"></i> Download Template
                                 </a>
                             </div>
                             <div class="col-md-4">
-                                <a href="{{ url_for('employee_import.export_current') }}" class="btn btn-outline-success">
+                                <a href="{{ url_for('employee_import.export_current_employees') }}" class="btn btn-outline-success">
                                     <i class="bi bi-file-excel"></i> Export Current
                                 </a>
                             </div>
